--- a/hospital.management1/src/main/resources/templates/index.html
+++ b/hospital.management1/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="container text-center">
 		<h1>NewLife Hospital Management home page</h1>
-		<h3><a th:href="@{/patients}">List of Patients</a></h3>
+<!-- 		<h3><a th:href="@{/patients}">List of Patients</a></h3> -->
 		<h3><a th:href="@{/register}">Register New Patient</a></h3>
 		<h3><a th:href="@{/login}">Login Old Patient</a></h3>
 	</div>
