--- a/hospital.management1/src/main/resources/templates/register_success.html
+++ b/hospital.management1/src/main/resources/templates/register_success.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 	<div class="container text-center">
-		<h3>You have signed up successfully!</h3>
-		<h4><a th:href="@{/login}">Click here to Login</a></h4>
+		<h3>You Have Signed Up Successfully!</h3>
+		<h4><a th:href="@{/login}">Click Here To Login</a></h4>
 	</div>
 	
 </body>
