--- a/hospital.management1/src/main/resources/templates/signup_form.html
+++ b/hospital.management1/src/main/resources/templates/signup_form.html
@@ -46,21 +46,21 @@
 				</div>
 			</div>
 			<div class="form-group row">
-				<label class="col-4 col-form-label">gender: </label>
+				<label class="col-4 col-form-label">Gender: </label>
 				<div class="col-8">
 					<input type="text" th:field="*{gender}" class="form-control" 
 							required minlength="2" maxlength="20" />
 				</div>
 			</div>
 			<div class="form-group row">
-				<label class="col-4 col-form-label">address: </label>
+				<label class="col-4 col-form-label">Address: </label>
 				<div class="col-8">
 					<input type="text" th:field="*{address}" class="form-control" 
 							required minlength="2" maxlength="20" />
 				</div>
 			</div>
 			<div class="form-group row">
-				<label class="col-4 col-form-label">phoneNumber: </label>
+				<label class="col-4 col-form-label">PhoneNumber: </label>
 				<div class="col-8">
 					<input type="text" th:field="*{phoneNumber}" class="form-control" 
 							required minlength="2" maxlength="20" />
