--- a/hospital.management1/src/main/resources/templates/users.html
+++ b/hospital.management1/src/main/resources/templates/users.html
@@ -10,43 +10,48 @@
 <body>
 <div class="container text-center">
 	<div>
-		<form th:action="@{/logout}" method="post">
-			<p>
-
-			</p>
-			<input type="submit" value="Sign Out" />
+		
+			<h1>
+			Welcome <b>[[${#request.userPrincipal.principal.Name}]]</b><br>
+			Email is <b>[[${#request.userPrincipal.principal.Email}]]</b>
+			</h1>
+			
 		</form>
 	</div>
 	<div>
-		<h1>List of Users</h1>
+<!-- 		<h1>List of Patients(will remove later)</h1> -->
 	</div>
 	
-	<div>
-		<table class="table table-striped table-bordered">
-			<thead class="thead-dark">
-				<tr>
-					<th>User ID</th>
-					<th>E-mail</th>
-					<th> Name</th>
-					<th>Age</th>
-					<th>gender</th>
-					<th> address</th>
-					<th>phone</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="patient: ${listUsers}">
-					<td th:text="${patient.id}">User ID</td>
-					<td th:text="${patient.email}">E-mail</td>
-					<td th:text="${patient.name}">Name</td>
-					<td th:text="${patient.age}">Age</td>
-					<td th:text="${patient.gender}">gender</td>
-					<td th:text="${patient.address}">address</td>
-					<td th:text="${patient.phoneNumber}">phone</td>
-				</tr>
-			</tbody>
-		</table>
+<!-- 	<div> -->
+<!-- 		<table class="table table-striped table-bordered"> -->
+<!-- 			<thead class="thead-dark"> -->
+<!-- 				<tr> -->
+<!-- 					<th>User ID</th> -->
+<!-- 					<th>E-mail</th> -->
+<!-- 					<th> Name</th> -->
+<!-- 					<th>Age</th> -->
+<!-- 					<th>gender</th> -->
+<!-- 					<th> address</th> -->
+<!-- 					<th>phone</th> -->
+<!-- 				</tr> -->
+<!-- 			</thead> -->
+<!-- 			<tbody> -->
+<!-- 				<tr th:each="patient: ${listUsers}"> -->
+<!-- 					<td th:text="${patient.id}">User ID</td> -->
+<!-- 					<td th:text="${patient.email}">E-mail</td> -->
+<!-- 					<td th:text="${patient.name}">Name</td> -->
+<!-- 					<td th:text="${patient.age}">Age</td> -->
+<!-- 					<td th:text="${patient.gender}">gender</td> -->
+<!-- 					<td th:text="${patient.address}">address</td> -->
+<!-- 					<td th:text="${patient.phoneNumber}">phone</td> -->
+<!-- 				</tr> -->
+<!-- 			</tbody> -->
+<!-- 		</table> -->
+<!-- 	</div> -->
+	<div> 
 	</div>
-</div>
+<h3><a th:href="@{/book}">Book Appointment</a></h3>
+<h3><a th:href="@{/booklab}">Book Lab Facility</a></h3>
+		</div>
 </body>
 </html>
