custom login patient

--- a/hospital.management1/src/main/resources/templates/appoinment_success.html
+++ b/hospital.management1/src/main/resources/templates/appoinment_success.html
@@ -15,19 +15,19 @@
         <tbody>
             <tr>
                 <td><strong>Booking ID:</strong></td>
-                <td><span th:text="${appoinment.id}"></span></td>
+                <td><span th:text="${appointment.id}"></span></td>
             </tr>
             <tr>
                 <td><strong>Doctor name:</strong></td>
-                <td><span th:text="${appoinment.doctername}"></span></td>
+                <td><span th:text="${appointment.doctername}"></span></td>
             </tr>
              <tr>
                 <td><strong>Department Name:</strong></td>
-                <td><span th:text="${appoinment.department}"></span></td>
+                <td><span th:text="${appointment.department}"></span></td>
             </tr>
             <tr>
                 <td><strong>Date:</strong></td>
-                <td><span th:text="${appoinment.date}"></span></td>
+                <td><span th:text="${appointment.date}"></span></td>
             </tr>
          </tbody>
     </table>
