--- a/hospital.management1/src/main/resources/templates/bookapp.html
+++ b/hospital.management1/src/main/resources/templates/bookapp.html
@@ -15,7 +15,7 @@
 		<div>
 			<h1>Appointment Booking</h1>
 		</div>
-		<form th:action="@{/processAppoinment}" th:object="${appoinment}"
+		<form th:action="@{/processAppoinment}" th:object="${appointment}"
 			method="post" style="max-width: 600px; margin: 0 auto;">
 			<div class="m-3">
 				<div class="form-group row">
