--- a/hospital.management1/src/main/resources/templates/users.html
+++ b/hospital.management1/src/main/resources/templates/users.html
@@ -13,7 +13,11 @@
 		
 			<h1>
 			Welcome <b>[[${#request.userPrincipal.principal.Name}]]</b><br>
-			Email is <b>[[${#request.userPrincipal.principal.Email}]]</b>
+<!-- 			Email is <b>[[${#request.userPrincipal.principal.Email}]]</b><br> -->
+<!-- 			Welcome <b>[[${#request.userPrincipal.principal.Age}]]</b><br> -->
+<!-- 			Email is <b>[[${#request.userPrincipal.principal.Gender}]]</b><br> -->
+<!-- 			Welcome <b>[[${#request.userPrincipal.principal.Address}]]</b><br> -->
+<!-- 			Email is <b>[[${#request.userPrincipal.principal.PhoneNumber}]]</b><br> -->
 			</h1>
 			
 		</form>
