--- a/hospital.management1/src/main/resources/templates/bookapp.html
+++ b/hospital.management1/src/main/resources/templates/bookapp.html
@@ -14,20 +14,33 @@
 	<div class="container text-center">
 		<div>
 			<h1>Appointment Booking</h1>
+			<h1>
+				Welcome <b>[[${#request.userPrincipal.principal.Name}]]</b><br>
+				
+			</h1>
 		</div>
 		<form th:action="@{/processAppoinment}" th:object="${appointment}"
 			method="post" style="max-width: 600px; margin: 0 auto;">
 			<div class="m-3">
 				<div class="form-group row">
+					</div>
+				
+                 <input type="hidden" name="name" th:value="${#request.userPrincipal.principal.Name}" />
+						<input type="hidden" name="email" th:value="${#request.userPrincipal.principal.Email}" />
+				<input type="hidden" name="age" th:value="${#request.userPrincipal.principal.Age}" />
+						<input type="hidden" name="address" th:value="${#request.userPrincipal.principal.Address}" />	    
+				<input type="hidden" name="gender" th:value="${#request.userPrincipal.principal.Gender}" />
+						<input type="hidden" name="phoneNumber" th:value="${#request.userPrincipal.principal.PhoneNumber}" />
+				<div class="form-group row">
 					<label class="col-4 col-form-label">Doctor Name </label>
 					<div class="col-8">
-						<!-- 		    <input type="text" th:field="*{doctername}" name="doctername" class="form-control" required /> -->
-						<!-- 				<input type="text"  name="doctername" th:value="${doctername}" class="form-control"  /> -->
-						<select  name="doctername" th:value="${doctername}" class="form-control" >
-							<option value="Outpatient department">Outpatient department</option>
-							<option value="ENT">ENT</option>
-							<option value="SURGERY">SURGERY</option>
-							<option value="SKIN">SKIN</option>
+
+						<select name="doctername" th:value="${doctername}"
+							class="form-control">
+							<option value="Dr. abc def">Dr. abc def</option>
+							<option value="Dr. ghi jkl">Dr. ghi jkl</option>
+							<option value="Dr. mno pqr">Dr. mno pqr</option>
+							<option value="Dr. stu vwx">Dr. stu vwx</option>
 						</select>
 					</div>
 				</div>
@@ -35,9 +48,9 @@
 				<div class="form-group row">
 					<label class="col-4 col-form-label">Department </label>
 					<div class="col-8">
-						<!-- 					<input type="text" th:field="*{department}" name="doctername" class="form-control"/> -->
-						<!-- 				<input type="text"  name="department" th:value="${department}" class="form-control" /> -->
-						<select name="department" th:value="${department}" class="form-control" >
+
+						<select name="department" th:value="${department}"
+							class="form-control">
 							<option value="Outpatientdepartment">Outpatient department</option>
 							<option value="ENT">ENT</option>
 							<option value="SURGERY">SURGERY</option>
@@ -49,9 +62,22 @@
 				<div class="form-group row">
 					<label class="col-4 col-form-label"> Date </label>
 					<div class="col-8">
-						<!-- 					<input type="text" th:field="*{date}" name="date" class="form-control" /> -->
-						<input type="text" name="date" th:value="${date}"
+
+						<input type="date" name="date" th:value="${date}"
 							class="form-control" />
+					</div>
+				</div>
+				<div class="form-group row">
+					<label class="col-4 col-form-label">Department </label>
+					<div class="col-8">
+
+						<select name="slot" th:value="${slot}"
+							class="form-control">
+							<option value="10:00AM-12:00PM">10AM-12PM</option>
+							<option value="12:00PM-2:00PM">12PM-2PM</option>
+							<option value="3:00PM-5:00PM">3PM-5PM</option>
+							<option value="5:00PM-7:00PM">5PM-7PM</option>
+						</select>
 					</div>
 				</div>
 				<div>
