--- a/hospital.management1/src/main/resources/templates/login.html
+++ b/hospital.management1/src/main/resources/templates/login.html
@@ -14,6 +14,9 @@
 		</div>
 		<form th:action="@{/dologin}"  method="post" style="max-width: 600px; margin: 0 auto;">
 		<div class="m-3">
+		<div th:if="${param.error}" class="alert alert-error">
+		<h5 style="color:red;">Invalid Email Or Password Try Again!</h4>
+		</div>
 			<div class="form-group row">
 				<label class="col-4 col-form-label">E-mail: </label>
 				<div class="col-8">
