--- a/hospital.management1/src/main/resources/templates/signup_form.html
+++ b/hospital.management1/src/main/resources/templates/signup_form.html
@@ -41,15 +41,17 @@
 			<div class="form-group row">
 				<label class="col-4 col-form-label">Age: </label>
 				<div class="col-8">
-					<input type="text" th:field="*{age}" class="form-control" 
-							required minlength="2" maxlength="20" />
+					<input type="number" th:field="*{age}" class="form-control" 
+							required minlength="2" maxlength="2" />
 				</div>
 			</div>
 			<div class="form-group row">
 				<label class="col-4 col-form-label">Gender: </label>
 				<div class="col-8">
-					<input type="text" th:field="*{gender}" class="form-control" 
-							required minlength="2" maxlength="20" />
+
+							<input type="radio" name="gender" th:field="*{gender}" value="male"> Male
+                            <input type="radio" name="gender" th:field="*{gender}" value="female"> Female
+							
 				</div>
 			</div>
 			<div class="form-group row">
@@ -63,7 +65,7 @@
 				<label class="col-4 col-form-label">PhoneNumber: </label>
 				<div class="col-8">
 					<input type="text" th:field="*{phoneNumber}" class="form-control" 
-							required minlength="2" maxlength="20" />
+							required minlength="10" maxlength="10" />
 				</div>
 			</div>
 			<div>
