View Old Appointment Booking And Lab Booking

--- a/hospital.management1/src/main/resources/templates/appoinment_success.html
+++ b/hospital.management1/src/main/resources/templates/appoinment_success.html
@@ -59,6 +59,7 @@
             </tr>
          </tbody>
     </table>
+    <h3><a th:href="@{/patients}">Home</a></h3>
 		<form th:action="@{/logout}" method="post">
         <input type="submit" value="Sign Out" />
         </form>
